--- a/InterviewTest.DriverData/InterviewTest.DriverData.csproj
+++ b/InterviewTest.DriverData/InterviewTest.DriverData.csproj
@@ -41,12 +41,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyserLookup.cs" />
+    <Compile Include="Analysers\BaseDriverAnalyser.cs" />
     <Compile Include="Analysers\DeliveryDriverAnalyser.cs" />
     <Compile Include="Analysers\FormulaOneAnalyser.cs" />
     <Compile Include="Analysers\FriendlyAnalyser.cs" />
     <Compile Include="Analysers\GetawayDriverAnalyser.cs" />
     <Compile Include="Analysers\IAnalyser.cs" />
     <Compile Include="CannedData.cs" />
+    <Compile Include="Entities\DriverAnalysisCriteria.cs" />
+    <Compile Include="Entities\PeriodAnalysis.cs" />
+    <Compile Include="Helpers\MathFunctions.cs" />
     <Compile Include="HistoryAnalysis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Period.cs" />
