Implementation for Task 2

--- a/InterviewTest.DriverData.UnitTests/InterviewTest.DriverData.UnitTests.csproj
+++ b/InterviewTest.DriverData.UnitTests/InterviewTest.DriverData.UnitTests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Analysers\DeliveryDriverAnalyserTests.cs" />
     <Compile Include="Analysers\GetawayDriverAnalyserTests.cs" />
     <Compile Include="Analysers\FriendlyAnalyserTests.cs" />
+    <Compile Include="Lookups\AnalyserLookupTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
