--- a/InterviewTest.DriverData/InterviewTest.DriverData.csproj
+++ b/InterviewTest.DriverData/InterviewTest.DriverData.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,14 +52,20 @@
     <Compile Include="Analysers\GetawayDriverAnalyser.cs" />
     <Compile Include="Analysers\IAnalyser.cs" />
     <Compile Include="CannedData.cs" />
+    <Compile Include="DataFileReaders\IDataFileReader.cs" />
     <Compile Include="Entities\DriverAnalysisCriteria.cs" />
     <Compile Include="Entities\PeriodAnalysis.cs" />
+    <Compile Include="DataFileReaders\FileDataReader.cs" />
+    <Compile Include="Parsers\JsonDataParser.cs" />
     <Compile Include="Helpers\MathFunctions.cs" />
     <Compile Include="HistoryAnalysis.cs" />
+    <Compile Include="Parsers\IDataParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Period.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="DataFiles\HistoryData.json" />
+    <None Include="packages.config" />
     <None Include="readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
